--- a/templates/dashboards/project_main_phases.html
+++ b/templates/dashboards/project_main_phases.html
@@ -17,8 +17,8 @@
                 <table class="w-100 items-list bg-transparent">
                     <thead>
                         <tr class="bg-white">
-                            <th>Name</th>
-                            <th>Action</th>
+                            <th>{% trans "Name" %}</th>
+                            <th>{% trans "Action" %}</th>
                         </tr>
                     </thead>
                     <tbody>
@@ -40,7 +40,7 @@
             </div>
             <div class="dashboard-panel border bg-white rounded overflow-hidden w-100">
                 <div class="col">
-                    <a href="#" class="btn btn-outline-primary">Add New Phase</a>
+                    <a href="#" class="btn btn-outline-primary">{% trans "Add New Phase" %}</a>
                 </div>
             </div>
             {% include 'pagination.html' %}
