--- a/templates/dashboards/dashboard_base.html
+++ b/templates/dashboards/dashboard_base.html
@@ -11,7 +11,8 @@
     <meta http-equiv="X-UA-Compatible" content="IE=edge">
     <meta name="viewport" content="width=device-width, initial-scale=1">
     <meta name="description" content="Uniland - Real Estate HTML5 Template">
-    <meta name="keywords" content="real estate, property, property search, agent, apartments, booking, business, idx, housing, real estate agency, rental">
+    <meta name="keywords"
+          content="real estate, property, property search, agent, apartments, booking, business, idx, housing, real estate agency, rental">
     <meta name="author" content="unicoder">
     <title>Real Estate</title>
     <!-- Favicon -->
@@ -24,7 +25,8 @@
 
     <link rel="preconnect" href="https://fonts.googleapis.com">
     <link rel="preconnect" href="https://fonts.gstatic.com" crossorigin>
-    <link href="https://fonts.googleapis.com/css2?family=Barlow:ital,wght@0,300;0,400;0,500;0,700;1,400&display=swap" rel="stylesheet">
+    <link href="https://fonts.googleapis.com/css2?family=Barlow:ital,wght@0,300;0,400;0,500;0,700;1,400&display=swap"
+          rel="stylesheet">
 
 
     <!-- Required style of the theme -->
@@ -45,24 +47,24 @@
 </head>
 
 <body>
-    <div class="preloader">
-		<div class="loader xy-center"></div>
-	</div>
+<div class="preloader">
+    <div class="loader xy-center"></div>
+</div>
 
-    <div id="page_wrapper" class="bg-light vh-100">
-        <div class="container-fluid">
-            <div class="row">
-                <div class="col-md-4 col-lg-3 col-xl-2 px-0">
-                    <div class="dashboard-nav-area bg-secondary pt-4">
-                        <a class="navbar-brand d-table px-40 py-3 mb-3" href="{% url "main_app:index" %}">
-                            <img src="{% static 'images/logo/dash-logo.png' %}" alt="dashboard logo"></a>
-                        <div class="collaps-dashboard m-3 px-3 rounded bg-white text-secondary clearfix d-md-none">
-                            <span>{% trans "Open Dashboard Navigation" %}</span>
-                            <span class="flaticon-menu text-secondary flat-mini float-end"></span>
-                        </div>
-                        <nav class="dashboard-nav nav-light pb-3" id="navbarSupportedContent">
-                            <ul class="navbar-nav left-collaps-nav">
-                                {% if user.is_developer %}
+<div id="page_wrapper" class="bg-light vh-100">
+    <div class="container-fluid">
+        <div class="row">
+            <div class="col-md-4 col-lg-3 col-xl-2 px-0">
+                <div class="dashboard-nav-area bg-secondary pt-4">
+                    <a class="navbar-brand d-table px-40 py-3 mb-3" href="{% url "main_app:index" %}">
+                        <img src="{% static 'images/logo/dash-logo.png' %}" alt="dashboard logo"></a>
+                    <div class="collaps-dashboard m-3 px-3 rounded bg-white text-secondary clearfix d-md-none">
+                        <span>{% trans "Open Dashboard Navigation" %}</span>
+                        <span class="flaticon-menu text-secondary flat-mini float-end"></span>
+                    </div>
+                    <nav class="dashboard-nav nav-light pb-3" id="navbarSupportedContent">
+                        <ul class="navbar-nav left-collaps-nav">
+                            {% if user.is_developer %}
                                 <li class="text-white pb-2 pt-4 px-20">{% trans "Projects Administration" %}</li>
                                 <li class="nav-item">
                                     <a class="nav-link" href="{% url "main_app:my-project-list" %}">
@@ -70,107 +72,110 @@
                                         {% trans "My Projects" %}
                                     </a>
                                 </li>
-                                {% endif %}
-                                <li class="text-white pb-2 pt-4 px-20">{% trans "Account Settings" %}</li>
-                                <li class="nav-item">
-                                    <a class="nav-link" href="{% url 'accounts:developer-profile' %}">
-                                        <i class="flaticon-user flat-mini pe-2"></i>
-                                        {% trans "Personal Profile" %}
-                                    </a>
-                                </li>
-                                <li class="nav-item">
-                                    <a class="nav-link" href="{% url "accounts:forget-password" %}">
-                                        <i class="flaticon-locked flat-mini pe-2"></i>
-                                        {% trans "Change Password" %}
-                                    </a>
-                                </li>
-                                <li class="nav-item">
-                                    <a class="nav-link" href="{% url "accounts:logout" %}">
-                                        <i class="flaticon-transfer flat-mini pe-2"></i>
-                                        {% trans "Logout" %}
-                                    </a>
-                                </li>
-                            </ul>
-                        </nav>
-                    </div>
+                            {% endif %}
+                            <li class="text-white pb-2 pt-4 px-20">{% trans "Account Settings" %}</li>
+                            <li class="nav-item">
+                                <a class="nav-link" href="{% url 'accounts:developer-profile' %}">
+                                    <i class="flaticon-user flat-mini pe-2"></i>
+                                    {% trans "Personal Profile" %}
+                                </a>
+                            </li>
+                            <li class="nav-item">
+                                <a class="nav-link" href="{% url "accounts:forget-password" %}">
+                                    <i class="flaticon-locked flat-mini pe-2"></i>
+                                    {% trans "Change Password" %}
+                                </a>
+                            </li>
+                            <li class="nav-item">
+                                <a class="nav-link" href="{% url "accounts:logout" %}">
+                                    <i class="flaticon-transfer flat-mini pe-2"></i>
+                                    {% trans "Logout" %}
+                                </a>
+                            </li>
+                        </ul>
+                    </nav>
                 </div>
-                <div class="col-md-8 col-lg-9 col-xl-10 px-0 dashboard-body" style="height: 100vh; overflow-y: scroll;">
-                    <!--============== Header Section Start ==============-->
-                    <header class="header-unfix border-bottom bg-white">
-                        <div class="main-nav xs-p-0">
-                            <div class="container-fluid">
-                                <div class="row">
-                                    <div class="col-md-12">
-                                        <nav class="navbar navbar-expand-lg nav-secondary nav-primary-hover nav-line-active px-3">
-                                            <div class="navbar-collapse justify-content-between sm-ml-0">
-                                                <ul class="navbar-nav sm-mx-none">
-                                                    <li class="nav-item">
-                                                        <a class="nav-link" href="#">{% trans "Dashboard" %}</a>
-                                                    </li>
-                                                </ul>
-                                                <ul class="navbar-nav user-option">
-                                                    <li class="nav-item">
-                                                        {% if user.is_developer %}
-                                                        <a class="nav-link" href="{% url 'accounts:developer-profile' %}">
-                                                            <img src="{{ user.get_logo_image_or_avatar }}" alt=""> {% trans "Hi," %} {{ user.get_full_name }}
+            </div>
+            <div class="col-md-8 col-lg-9 col-xl-10 px-0 dashboard-body" style="height: 100vh; overflow-y: scroll;">
+                <!--============== Header Section Start ==============-->
+                <header class="header-unfix border-bottom bg-white">
+                    <div class="main-nav xs-p-0">
+                        <div class="container-fluid">
+                            <div class="row">
+                                <div class="col-md-12">
+                                    <nav class="navbar navbar-expand-lg nav-secondary nav-primary-hover nav-line-active px-3">
+                                        <div class="navbar-collapse justify-content-between sm-ml-0">
+                                            <ul class="navbar-nav sm-mx-none">
+                                                <li class="nav-item">
+                                                    <a class="nav-link" href="#">{% trans "Dashboard" %}</a>
+                                                </li>
+                                            </ul>
+                                            <ul class="navbar-nav user-option">
+                                                <li class="nav-item">
+                                                    {% if user.is_developer %}
+                                                        <a class="nav-link"
+                                                           href="{% url 'accounts:developer-profile' %}">
+                                                            <img src="{{ user.get_logo_image_or_avatar }}"
+                                                                 alt=""> {% trans "Hi," %} {{ user.get_full_name }}
                                                         </a>
-                                                        {% else %}
+                                                    {% else %}
                                                         <a class="nav-link" href="{% url 'accounts:client-profile' %}">
-                                                            <img src="{{ user.get_logo_image_or_avatar }}" alt=""> {% trans "Hi," %} {{ user.get_full_name }}
+                                                            <img src="{{ user.get_logo_image_or_avatar }}"
+                                                                 alt=""> {% trans "Hi," %} {{ user.get_full_name }}
                                                         </a>
-                                                        {% endif %}
-                                                    </li>
-                                                </ul>
-                                            </div>
-                                        </nav>
-                                    </div>
+                                                    {% endif %}
+                                                </li>
+                                            </ul>
+                                        </div>
+                                    </nav>
                                 </div>
                             </div>
                         </div>
-                    </header>
-
-                    <div class="full-row px-40 py-30 xs-p-0">
-                        <div class="container-fluid">
-                            {% block page_header %}
-
-                            {% endblock page_header %}
-
-                            {% block main_containt %}
-
-                            {% endblock main_containt %}
-                        </div>
                     </div>
-                    <!--============== Dashboard End ==============-->
+                </header>
 
-                    <!-- Footre -->
-                    <div class="full-row pt-0 pb-5">
-                        <div class="container-fluid">
-                            <div class="row">
-                                <div class="col-12 text-center"><span>© {% trans "2022 All right reserved" %}</span></div>
-                            </div>
-                        </div>
+                <div class="full-row px-40 py-30 xs-p-0">
+                    <div class="container-fluid">
+                        {% block page_header %}
+
+                        {% endblock page_header %}
+
+                        {% block main_containt %}
+
+                        {% endblock main_containt %}
                     </div>
-
                 </div>
+                <!--============== Dashboard End ==============-->
+
+                <!-- Footre -->
+                <div class="full-row pt-0 pb-5">
+                    <div class="container-fluid">
+                        <div class="row">
+                            <div class="col-12 text-center"><span>© {% trans "2022 All right reserved" %}</span></div>
+                        </div>
+                    </div>
+                </div>
+
             </div>
         </div>
-
     </div>
 
-    <!-- Javascript Files -->
-    <script src="{% static 'js/jquery.min.js' %}"></script>
-    <script src="{% static 'js/popper.min.js' %}"></script>
-    <script src="{% static 'js/bootstrap.min.js' %}"></script>
-    <script src="{% static 'js/bootstrap-select.min.js' %}"></script>
-    <script src="{% static 'js/jquery.fancybox.min.js' %}"></script>
-    <script src="{% static 'js/owl.js' %}"></script>
-    <script src="{% static 'js/range/tmpl.js' %}"></script>
-    <script src="{% static 'js/range/jquery.dependClass.js' %}"></script>
-    <script src="{% static 'js/range/draggable.js' %}"></script>
-    <script src="{% static 'js/range/jquery.slider.js' %}"></script>
-    <script src="{% static 'js/wow.js' %}"></script>
-    <script src="{% static 'js/mixitup.min.js' %}"></script>
-    <script src="{% static 'js/custom.js' %}"></script>
+</div>
+
+<!-- Javascript Files -->
+<script src="{% static 'js/jquery.min.js' %}"></script>
+<script src="{% static 'js/popper.min.js' %}"></script>
+<script src="{% static 'js/bootstrap.min.js' %}"></script>
+<script src="{% static 'js/bootstrap-select.min.js' %}"></script>
+<script src="{% static 'js/jquery.fancybox.min.js' %}"></script>
+<script src="{% static 'js/owl.js' %}"></script>
+<script src="{% static 'js/range/tmpl.js' %}"></script>
+<script src="{% static 'js/range/jquery.dependClass.js' %}"></script>
+<script src="{% static 'js/range/draggable.js' %}"></script>
+<script src="{% static 'js/range/jquery.slider.js' %}"></script>
+<script src="{% static 'js/wow.js' %}"></script>
+<script src="{% static 'js/mixitup.min.js' %}"></script>
+<script src="{% static 'js/custom.js' %}"></script>
 
 </body>
 
