--- a/templates/dashboards/my_admin.html
+++ b/templates/dashboards/my_admin.html
@@ -2,20 +2,20 @@
 {% load static i18n %}
 {% load crispy_forms_tags %}
 {% block page_header %}
-<div class="row">
-    <div class="col">
-        <h3 class="my-3">{{ listing_title }}</h3>
+    <div class="row">
+        <div class="col">
+            <h3 class="my-3">{{ listing_title }}</h3>
+        </div>
     </div>
-</div>
 {% endblock page_header %}
 
 {% block main_containt %}
-<div class="row">
-    <div class="col">
-        <div class="dashboard-panel border bg-white rounded overflow-hidden w-100">
-            <div class="overflow-x-scroll font-fifteen">
-                <table class="w-100 items-list bg-transparent">
-                    <thead>
+    <div class="row">
+        <div class="col">
+            <div class="dashboard-panel border bg-white rounded overflow-hidden w-100">
+                <div class="overflow-x-scroll font-fifteen">
+                    <table class="w-100 items-list bg-transparent">
+                        <thead>
                         <tr class="bg-white">
                             <th>{% trans 'Name' %}</th>
                             <th>{% trans 'Type' %}</th>
@@ -23,52 +23,57 @@
                             <th>{% trans 'Area' %}</th>
                             <th></th>
                         </tr>
-                    </thead>
-                    <tbody>
+                        </thead>
+                        <tbody>
                         {% for project in projects %}
-                        <tr>
-                            <td>
-                                <img class="rounded" src="{{ project.get_first_image_or_default }}" alt="">
-                                <div class="property-info d-table">
-                                    <h5 class="text-secondary font-400">{{ project.name }}</h5>
-                                    <span><i class="fas fa-map-marker-alt text-primary font-13"></i> {{ project.get_address }}</span>
-                                </div>
-                            </td>
-                            <td>{{ project.get_type_display }}</td>
-                            <td>{{ project.get_statue_display }}</td>
-                            <td>{{ project.area }}</td>
-                            <td>
-                                <a href="{% url 'main:project-update' project.pk %}" class="text-primary me-4 mb-1"><i class="fas fa-edit"></i></a>
-                                <a href="{% url 'main:project-delete' project.pk %}" class="text-primary me-4 mb-1"><i class="fas fa-trash"></i></a>
-                                <a href="{% url 'main:project-phases' project.pk %}" class="text-primary mb-1"><i class="fas fa-building"></i></a>
-                            </td>
-                        </tr>
-                    {% empty %}
-                        <tr>
-                            <td colspan="5" style="text-align: center">
-                                <strong>{% trans "There Are No Projects Added By You!" %}</strong>
-                            </td>
-                        </tr>
-                    {% endfor %}
-                    </tbody>
-                </table>
-            </div>
-            <br>
-            <div class="container">
-                <div class="row">
-                    <div class="col-md-12 mb-20">
-                        <a href="{% url "main_app:add-project" %}" class="btn btn-primary">{% trans 'Add New Project' %}</a>
+                            <tr>
+                                <td>
+                                    <img class="rounded" src="{{ project.get_first_image_or_default }}" alt="">
+                                    <div class="property-info d-table">
+                                        <h5 class="text-secondary font-400">{{ project.name }}</h5>
+                                        <span><i
+                                                class="fas fa-map-marker-alt text-primary font-13"></i> {{ project.get_address }}</span>
+                                    </div>
+                                </td>
+                                <td>{{ project.get_type_display }}</td>
+                                <td>{{ project.get_statue_display }}</td>
+                                <td>{{ project.area }}</td>
+                                <td>
+                                    <a href="{% url 'main:project-update' project.pk %}" class="text-primary me-4 mb-1"><i
+                                            class="fas fa-edit"></i></a>
+                                    <a href="{% url 'main:project-delete' project.pk %}" class="text-primary me-4 mb-1"><i
+                                            class="fas fa-trash"></i></a>
+                                    <a href="{% url 'main:project-phases' project.pk %}" class="text-primary mb-1"><i
+                                            class="fas fa-building"></i></a>
+                                </td>
+                            </tr>
+                        {% empty %}
+                            <tr>
+                                <td colspan="5" style="text-align: center">
+                                    <strong>{% trans "There Are No Projects Added By You!" %}</strong>
+                                </td>
+                            </tr>
+                        {% endfor %}
+                        </tbody>
+                    </table>
+                </div>
+                <br>
+                <div class="container">
+                    <div class="row">
+                        <div class="col-md-12 mb-20">
+                            <a href="{% url "main_app:add-project" %}"
+                               class="btn btn-primary">{% trans 'Add New Project' %}</a>
+                        </div>
                     </div>
                 </div>
             </div>
         </div>
     </div>
-</div>
-<div class="container">
-    <div class="row">
-        <div class="col">
-            {% include 'pagination.html' %}
+    <div class="container">
+        <div class="row">
+            <div class="col">
+                {% include 'pagination.html' %}
+            </div>
         </div>
     </div>
-</div>
 {% endblock main_containt %}
