--- a/templates/main/project_detail.html
+++ b/templates/main/project_detail.html
@@ -72,7 +72,8 @@
                             <div class="form-row">
                                 <div class="col-12 mb-10">
                                     <div class="form-group mb-0">
-                                        <input type="text" class="form-control" name="name" placeholder="{% trans "Your Name" %}">
+                                        <input type="text" class="form-control" name="name"
+                                               placeholder="{% trans "Your Name" %}">
                                     </div>
                                 </div>
                                 <div class="col-12 mb-10">
@@ -89,7 +90,8 @@
                                 </div>
                                 <div class="col-12 mb-10">
                                     <div class="form-group mb-0">
-                                            <textarea class="form-control" name="message" placeholder="{% trans 'Message' %}"
+                                            <textarea class="form-control" name="message"
+                                                      placeholder="{% trans 'Message' %}"
                                                       rows="10"></textarea>
                                     </div>
                                 </div>
@@ -102,11 +104,11 @@
                         </form>
                     </div>
                     {% if user.is_authenticated %}
-                    <div class="widget widget_contact bg-white border p-30 shadow-one rounded mb-30">
-                        <h5 class="mb-4">{% trans "Invit a Friend" %}</h5>
-                        <p>Just copy the link and send it to you friend</p>
-                        <p>{% fullurl 'main_app:ref-subscribe' project.pk user.pk %}</p>
-                    </div>
+                        <div class="widget widget_contact bg-white border p-30 shadow-one rounded mb-30">
+                            <h5 class="mb-4">{% trans "Invit a Friend" %}</h5>
+                            <p>Just copy the link and send it to you friend</p>
+                            <p>{% fullurl 'main_app:ref-subscribe' project.pk user.pk %}</p>
+                        </div>
                     {% endif %}
                 </div>
                 <div class="col-xl-8 order-xl-1">
@@ -208,7 +210,9 @@
                                                         {% if free_phase.id == main_phase.id or is_subscribed %}
                                                             {% for sub_phase in main_phase.sub_phases.all %}
                                                                 <br>
-                                                                <h4>{{ forloop.counter }}\ {{ sub_phase.title }} <small class="text-gray">({{ sub_phase.start_date }} - {{ sub_phase.end_date }})</small></h4>
+                                                                <h4>{{ forloop.counter }}\ {{ sub_phase.title }} <small
+                                                                        class="text-gray">({{ sub_phase.start_date }}
+                                                                    - {{ sub_phase.end_date }})</small></h4>
                                                                 <br/>
                                                                 <br/>
                                                                 {% for update in sub_phase.updates.all %}
@@ -283,12 +287,12 @@
 {% endblock main_content %}
 
 {% block Custom_JS %}
-{{ block.super }}
-<script>
-    window.addEventListener("map:init", function (e) {
-        var detail = e.detail;
-        detail.map.setView([{{ project.location.coordinates|last }}, {{ project.location.coordinates|first }}], {{ default_zoom }});
-        L.marker([{{ project.location.coordinates|last }}, {{ project.location.coordinates|first }}]).addTo(detail.map);
-    }, false);
-</script>
+    {{ block.super }}
+    <script>
+        window.addEventListener("map:init", function (e) {
+            var detail = e.detail;
+            detail.map.setView([{{ project.location.coordinates|last }}, {{ project.location.coordinates|first }}], {{ default_zoom }});
+            L.marker([{{ project.location.coordinates|last }}, {{ project.location.coordinates|first }}]).addTo(detail.map);
+        }, false);
+    </script>
 {% endblock Custom_JS %}
