--- a/templates/base.html
+++ b/templates/base.html
@@ -1,12 +1,9 @@
 {% load static %}
 {% load i18n %}
 
-<!DOCTYPE html>
-{% if LANGUAGE_CODE == 'ar' %}
-    <html class="no-js arabic" lang="ar" dir="rtl">
-{% else %}
-    <html class="no-js" lang="en" dir="ltr">
-{% endif %}
+<!doctype html>
+<html lang="{{ LANGUAGE_CODE }}">
+
 <head>
     <!-- Meta Tag -->
     <meta charset="utf-8">
@@ -19,35 +16,49 @@
     <title>{% block page_title %}{% endblock page_title %}</title>
     <!-- Favicon -->
     <link rel="shortcut icon" href="{% static 'images/logo.jpg' %}">
-
     <!-- Google Font -->
-    <link rel="preconnect" href="https://fonts.googleapis.com">
-    <link rel="preconnect" href="https://fonts.gstatic.com" crossorigin>
-    <link href="https://fonts.googleapis.com/css2?family=Sen:wght@400;700&display=swap" rel="stylesheet">
-
-    <link rel="preconnect" href="https://fonts.googleapis.com">
-    <link rel="preconnect" href="https://fonts.gstatic.com" crossorigin>
-    <link href="https://fonts.googleapis.com/css2?family=Barlow:ital,wght@0,300;0,400;0,500;0,700;1,400&display=swap"
+    {% if LANGUAGE_CODE == 'ar' %}
+        <link href="https://fonts.googleapis.com/css2?family=Cairo:wght@300&display=swap" rel="stylesheet">
+    {% else %}
+        <link rel="preconnect" href="https://fonts.googleapis.com">
+        <link rel="preconnect" href="https://fonts.gstatic.com" crossorigin>
+        <link href="https://fonts.googleapis.com/css2?family=Sen:wght@400;700&display=swap" rel="stylesheet">
+        <link rel="preconnect" href="https://fonts.googleapis.com">
+        <link rel="preconnect" href="https://fonts.gstatic.com" crossorigin>
+        <link href="https://fonts.googleapis.com/css2?family=Barlow:ital,wght@0,300;0,400;0,500;0,700;1,400&display=swap"
           rel="stylesheet">
-
+    {% endif %}
     <script src="https://ajax.googleapis.com/ajax/libs/jquery/3.6.0/jquery.min.js"></script>
     <script src="https://maxcdn.bootstrapcdn.com/bootstrap/3.4.1/js/bootstrap.min.js"></script>
 
     <!-- Required style of the theme -->
-    <link rel="stylesheet" href="{% static 'css/bootstrap.min.css' %}">
-    <link rel="stylesheet" href="{% static 'css/bootstrap-select.min.css' %}">
-    <link rel="stylesheet" href="{% static 'css/all.min.css' %}">
-    <link rel="stylesheet" href="{% static 'css/animate.min.css' %}">
-    <link rel="stylesheet" href="{% static 'webfonts/flaticon/flaticon.css' %}">
-    <link rel="stylesheet" href="{% static 'css/owl.css' %}">
-    <link rel="stylesheet" href="{% static 'css/jquery.fancybox.min.css' %}">
-    <link rel="stylesheet" href="{% static 'css/layerslider.css' %}">
-    <link rel="stylesheet" href="{% static 'css/template.css' %}">
-    <link rel="stylesheet" href="{% static 'css/style.css' %}">
-    <link rel="stylesheet" href="{% static 'css/colors/color.css' %}">
-    <link rel="stylesheet" href="{% static 'css/loader.css' %}">
     {% if LANGUAGE_CODE == 'ar' %}
-        {# TODO: Add RTL CSS files#}
+        <link rel="stylesheet" href="{% static 'rtl/css/bootstrap.min.css' %}">
+        <link rel="stylesheet" href="{% static 'rtl/css/bootstrap-select.min.css' %}">
+        <link rel="stylesheet" href="{% static 'rtl/css/all.min.css' %}">
+        <link rel="stylesheet" href="{% static 'rtl/css/animate.min.css' %}">
+        <link rel="stylesheet" href="{% static 'rtl/webfonts/flaticon/flaticon.css' %}">
+        <link rel="stylesheet" href="{% static 'rtl/css/owl.css' %}">
+        <link rel="stylesheet" href="{% static 'rtl/css/jquery.fancybox.min.css' %}">
+        <link rel="stylesheet" href="{% static 'rtl/css/layerslider.css' %}">
+        <link rel="stylesheet" href="{% static 'rtl/css/template.css' %}">
+        <link rel="stylesheet" href="{% static 'rtl/css/style.css' %}">
+        <link rel="stylesheet" href="{% static 'rtl/css/colors/color.css' %}">
+        <link rel="stylesheet" href="{% static 'rtl/css/clock.css' %}">
+        <link rel="stylesheet" href="{% static 'rtl/css/rtl.css' %}">
+    {% else %}
+        <link rel="stylesheet" href="{% static 'css/bootstrap.min.css' %}">
+        <link rel="stylesheet" href="{% static 'css/bootstrap-select.min.css' %}">
+        <link rel="stylesheet" href="{% static 'css/all.min.css' %}">
+        <link rel="stylesheet" href="{% static 'css/animate.min.css' %}">
+        <link rel="stylesheet" href="{% static 'webfonts/flaticon/flaticon.css' %}">
+        <link rel="stylesheet" href="{% static 'css/owl.css' %}">
+        <link rel="stylesheet" href="{% static 'css/jquery.fancybox.min.css' %}">
+        <link rel="stylesheet" href="{% static 'css/layerslider.css' %}">
+        <link rel="stylesheet" href="{% static 'css/template.css' %}">
+        <link rel="stylesheet" href="{% static 'css/style.css' %}">
+        <link rel="stylesheet" href="{% static 'css/colors/color.css' %}">
+        <link rel="stylesheet" href="{% static 'css/loader.css' %}">
     {% endif %}
     {% block custom_CSS %}
 
